fix horizontal scroll

--- a/src-scss/sidebar-tree.scss
+++ b/src-scss/sidebar-tree.scss
@@ -3,6 +3,8 @@
     font-family: Monaco, Menlo, 'Ubuntu Mono', Consolas, source-code-pro, monospace;
     font-size: 14px;
 
+    overflow-x: hidden;
+
     ul {
 	margin-top: 5px;
 	margin-right: 0px;
